--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,7 +17,9 @@ build:
 requirements:
   host:
     - pip
-    - python
+    - python >=3.6
+    - setuptools
+    - setuptools_scm
   run:
     - click
     - custodian >=2019.8.24
@@ -26,7 +28,7 @@ requirements:
     - numpy
     - pydantic
     - pymatgen >=2022.3.22
-    - python
+    - python >=3.6
     - pyyaml
 
 test:
